--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -5,3 +5,19 @@
     <input type="text" name="searchStr" [(ngModel)]="searchStr" (keyup)="searchMusic()" class="form-control" placeholder="Search Music...">
   </div>
 </form>
+
+<div *ngIf="searchRes">
+  <div *ngFor="let res of searchRes">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="searchRes well">
+          <h4><a href="#">{{ res.name }}</a></h4>
+          <div>
+            <strong>Genres: </strong>
+            <span *ngFor="let genre of res.genres">&nbsp;{{ genre }}&nbsp;</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
