--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="searchRes well">
-          <h4><a href="#">{{ res.name }}</a></h4>
+          <h4><a routerLink="/artist/{{res.id}}">{{ res.name }}</a></h4>
           <div>
             <strong>Genres: </strong>
             <span *ngFor="let genre of res.genres">&nbsp;{{ genre }}&nbsp;</span>
