--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,3 @@
-<p>
-  about works!
-</p>
+<h1>About Pre-Spotify</h1>
+<h3>Version: 1.0</h3>
+<p>This is and Angular 4 app that uses Spotify Web Api to find artists and display albums and track listings</p>
