--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+.main {
+    border-bottom: #333 1px solid;
+    padding: 30px 0;
+}
